# finecode

./: .env.example  .gitignore  .mcp.json  README.md  docker-compose.otel.yml  finecode-workspace.toml  mkdocs.yml  pyproject.toml  setup.py
actions/fine_python_ast/: pyproject.toml
actions/fine_python_ast/fine_python_ast/: __init__.py  ast_provider.py  iast_provider.py
actions/fine_python_black/: pyproject.toml
actions/fine_python_black/fine_python_black/: __init__.py  action.py
actions/fine_python_flake8/: pyproject.toml
actions/fine_python_flake8/fine_python_flake8/: __init__.py  action.py
actions/fine_python_import_linter/: pyproject.toml
actions/fine_python_module_exports/: pyproject.toml
extensions/fine_docs_mkdocs/: pyproject.toml  setup.py
extensions/fine_docs_mkdocs/fine_docs_mkdocs/: __init__.py  build_docs_handler.py  serve_docs_handler.py
extensions/fine_python_ast/: .gitignore  pyproject.toml  setup.py
extensions/fine_python_ast/fine_python_ast/: activator.py
extensions/fine_python_black/: .gitignore  pyproject.toml  setup.py
extensions/fine_python_black/fine_python_black/: __init__.py  action.py  format_python_file_handler.py
extensions/fine_python_import_linter/: .gitignore  pyproject.toml  setup.py
extensions/fine_python_import_linter/fine_python_import_linter/: __init__.py  check_python_imports_handler.py  contracts.py
extensions/fine_python_import_linter/tests/: test_check_python_imports_handler.py
extensions/fine_python_isort/: .gitignore  pyproject.toml  setup.py
extensions/fine_python_isort/fine_python_isort/: __init__.py  action.py  format_python_file_handler.py
extensions/fine_python_module_exports/: .gitignore  pyproject.toml  setup.py
extensions/fine_python_module_exports/fine_python_module_exports/: extension.py
extensions/fine_python_package_info/: .gitignore  pyproject.toml  setup.py
extensions/fine_python_package_info/fine_python_package_info/: __init__.py  activator.py  build_artifact_py_handler.py  get_dist_artifact_version_py_handler.py  get_src_artifact_registries_py_handler.py  get_src_artifact_version_py_handler.py  group_src_artifact_files_by_lang_python.py  group_src_artifact_files_by_lang_python_handler.py  is_artifact_published_to_registry_py_handler.py  list_project_files_by_lang_python.py  list_src_artifact_files_by_lang_python.py  publish_artifact_to_registry_py_handler.py  py_package_layout_info_provider.py  py_src_artifact_file_classifier.py  sync_python_interpreters_handler.py
extensions/fine_python_package_info/tests/: __init__.py  stubs.py  test_sync_python_interpreters_handler.py
extensions/fine_python_pyrefly/: .gitignore  pyproject.toml
extensions/fine_python_pyrefly/fine_python_pyrefly/: __init__.py  _lsp_hierarchy_utils.py  _lsp_location_utils.py  activator.py  call_hierarchy_incoming_calls_handler.py  call_hierarchy_outgoing_calls_handler.py  definition_handler.py  document_highlight_handler.py  hover_handler.py  implementation_handler.py  inlay_hint_handler.py  lint_files_handler.py  lint_handler.py  prepare_call_hierarchy_handler.py  prepare_type_hierarchy_handler.py  pyrefly_lsp_service.py  references_handler.py  semantic_tokens_handler.py  type_check_files_handler.py  type_definition_handler.py  type_hierarchy_subtypes_handler.py  type_hierarchy_supertypes_handler.py
extensions/fine_python_pyrefly/tests/: __init__.py
extensions/fine_python_pytest/: pyproject.toml  setup.py
extensions/fine_python_pytest/fine_python_pytest/: __init__.py  list_tests_handler.py  run_tests_handler.py
extensions/fine_python_setuptools_scm/: pyproject.toml  setup.py
extensions/fine_python_setuptools_scm/fine_python_setuptools_scm/: __init__.py  get_src_artifact_version_setuptools_scm_handler.py
extensions/fine_python_virtualenv/: .gitignore  pyproject.toml  setup.py
extensions/fine_system_claude_code/: pyproject.toml  setup.py
extensions/fine_system_claude_code/fine_system_claude_code/: __init__.py  install_claude_code_handler.py
extensions/fine_toml_lang/: pyproject.toml
extensions/fine_toml_lang/fine_toml_lang/: __init__.py  format_toml_file_action.py  group_src_artifact_files_by_lang_toml_handler.py  lint_toml_files_action.py  list_src_artifact_files_by_lang_toml_handler.py  text_document_semantic_tokens_toml_action.py
finecode_builtin_handlers/: pyproject.toml
finecode_builtin_handlers/src/finecode_builtin_handlers/: __init__.py  clean_finecode_logs.py  clean_service_logs_handler.py  clean_services_logs_discovery_handler.py  clean_services_logs_iterate_handler.py  create_envs_discover_envs.py  create_envs_dispatch.py  create_envs_dispatch_handler.py  dependency_config_utils.py  dump_config.py  dump_config_save.py  format.py  format_file_dispatch_handler.py  format_handler.py  (+42 more)
finecode_dev_common_preset/: pyproject.toml
finecode_dev_extensions/: pyproject.toml  setup.py
finecode_extension_api/: .gitignore  pyproject.toml  setup.py
finecode_extension_api/finecode_extension_api/: code_action.py  common_types.py  partialresultscheduler.py  textstyler.py
finecode_extension_api/tests/: test_lsp_service.py
finecode_extension_runner/: .gitignore  README.md  pyproject.toml
finecode_extension_runner/tests/: test_action_cancellation.py  test_command_runner_concurrency.py  test_concurrency.py  test_document_did_open.py  test_er_server_run_action.py  test_file_editor.py  test_file_loc.py  test_log_forwarding.py  test_parse_workspace_actions.py  test_project_action_runner_get_actions_for_parent.py  test_run_handlers_previous_result_reconstruction.py  test_sequential_handler_merge.py  test_service_registry_config_injection.py  test_streaming_generator_handler_return_code.py  test_streaming_handler_return_code.py  test_structure_payload_validation_error.py
presets/fine_audit_code/: pyproject.toml  setup.py
presets/fine_check_imports/: pyproject.toml  setup.py
presets/fine_code_hierarchy/: pyproject.toml  setup.py
presets/fine_dist_artifacts/: pyproject.toml  setup.py
presets/fine_docs/: pyproject.toml  setup.py
presets/fine_docs_markdown/: pyproject.toml  setup.py
(+920 files in other folders)
