[project]
name = "finecode_dev_common_preset"
version = "0.3.0a1"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <= 3.14"
dependencies = [
    "fine_python_aksem~=0.3.0a3",
    "fine_python_recommended~=0.5.0a0",
]

[tool.setuptools.package-data]
finecode_dev_common_preset = ["preset.toml"]
