[project]
name = "finecode_dev_common_preset"
version = "0.3.0a1"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 3.15"
dependencies = [
    "fine_python_recommended~=0.5.0a0",
    "fine_git_hooks~=0.1.0a0",
    "fine_logs~=0.1.0a0"
]

[tool.setuptools.package-data]
finecode_dev_common_preset = ["preset.toml"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

