[project]
name = "finecode_dev_extensions"
version = "0.2.0a0"
description = "FineCode development extensions"
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <= 3.14"
dependencies = ["finecode_extension_api~=0.4.0a0"]

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode.env.dev_workspace.dependencies]
finecode_dev_common_preset = { path = "../finecode_dev_common_preset", editable = true }
finecode = { path = "../", editable = true }
finecode_extension_runner = { path = "../finecode_extension_runner", editable = true }
finecode_dev_extensions = { path = "../finecode_dev_extensions", editable = true }

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
