[project]
name = "finecode_dev_extensions"
version = "0.2.0a0"
description = "FineCode development extensions"
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 3.15"
dependencies = ["finecode_extension_api~=0.4.0a0"]

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
