[project]
name = "finecode-extension-api"
version = "0.1.0"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic (>=2.10.6,<3.0.0)", "typing-extensions (>=4.12.2,<5.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
