[project]
name = "finecode_extension_api"
version = "0.3.0"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <= 3.14"
dependencies = ["typing-extensions (>=4.12.2,<5.0.0)"]

[dependency-groups]
dev_workspace = ["finecode==0.3.*", "finecode_dev_common_preset==0.2.*"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.finecode.env.dev_workspace.dependencies]
finecode_dev_common_preset = { path = "../finecode_dev_common_preset", editable = true }
finecode = { path = "../", editable = true }
finecode_extension_api = { path = "./", editable = true }
finecode_extension_runner = { path = "../finecode_extension_runner", editable = true }
