[project]
name = "finecode_extension_runner"
dynamic = ["version"]
description = "Extension runner component for FineCode"
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 3.15"
dependencies = [
    "loguru==0.7.*",
    "click==8.1.*",
    "finecode_extension_api~=0.4.0a0",
    "deepmerge==2.0.*",
    "debugpy==1.8.*",
    "ordered-set==4.1.*",
    "cattrs==26.1.*",
]

[dependency-groups]
dev_workspace = [
    "finecode~=0.4.0a0",
    "finecode_dev_common_preset~=0.3.0a0",
]
dev = ["finecode_extension_runner", "pytest==7.4.*", "debugpy==1.8.*"]

[tool.finecode.env.dev.dependencies]
finecode_extension_runner = { path = "../finecode_extension_runner", editable = true }
finecode_extension_api = { path = "../finecode_extension_api", editable = true }

[tool.finecode.env.dev_workspace.dependencies]
finecode_dev_common_preset = { path = "../finecode_dev_common_preset", editable = true }
finecode = { path = "../", editable = true }
finecode_extension_runner = { path = "../finecode_extension_runner", editable = true }

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.importlinter]
root_package = "finecode_extension_runner"
include_external_packages = true

[[tool.importlinter.contracts]]
id = "er-layered"
name = "ER layered architecture"
type = "layers"
layers = [
    "finecode_extension_runner.er_server",
    "finecode_extension_runner.services",
    "finecode_extension_runner.domain",
]

[tool.setuptools_scm]
version_file = "src/finecode_extension_runner/_version.py"
root = ".."

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.finecode.action.get_src_artifact_version]
source = "finecode_extension_api.actions.GetSrcArtifactVersionAction"
handlers_mode = "replace"
handlers = [
    { name = 'get_src_artifact_version_setuptools_scm', source = 'fine_python_setuptools_scm.GetSrcArtifactVersionSetuptoolsScmHandler', env = "dev_no_runtime", dependencies = [
        "fine_python_setuptools_scm~=0.1.0a1",
    ] },
]
