[project]
name = "fine_python_black"
version = "0.1.0"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <= 3.13"
dependencies = [
    "finecode @ file:///home/user/Development/FineCode/finecode/",
    "black (>=25.1.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
