[tool.poetry]
name = "fine_python_flake8"
version = "0.1.0"
description = ""
authors = ["Vladyslav Hnatiuk <aders1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
