[project]
name = "fine-python-import-linter"
version = "0.1.0"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <=3.13"
dependencies = [
    "finecode @ git+ssh://git@github.com:Aksem/FineCode.git",
    "import-linter (>=2.1,<3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
