[project]
name = "fine-python-module-exports"
version = "0.1.0"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <=3.13"
dependencies = [
    "finecode_extension_api @ git+ssh://git@github.com:Aksem/FineCode.git#subdirectory=finecode_extension_api",
    "fine_python_ast @ git+ssh://git@github.com:Aksem/FineCode.git#subdirectory=actions/fine_python_ast",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
