[project]
name = "fine_python_import_linter"
version = "0.1.0"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 3.15"
dependencies = [
    "finecode_extension_api == 0.4.*",
    "fine_check_imports~=0.1.0a0",
    "fine_python_lang~=0.1.0a0",
    "fine_inspect_code~=0.1.0a0",
    "import-linter (>=2.1,<3.0)",
]

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.setuptools]
packages = ["fine_python_import_linter"]
