[project]
name = "fine_python_isort"
version = "0.3.0a1"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.11, <= 3.14"
dependencies = ["finecode_extension_api~=0.4.0a0", "isort (>=5.13, <6)"]

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.finecode.env.dev_workspace.dependencies]
finecode_dev_common_preset = { path = "../../finecode_dev_common_preset", editable = true }
finecode = { path = "../../", editable = true }
finecode_extension_runner = { path = "../../finecode_extension_runner", editable = true }
finecode_extension_api = { path = "../../finecode_extension_api", editable = true }
finecode_jsonrpc = { path = "../../finecode_jsonrpc", editable = true }
finecode_builtin_handlers = { path = "../../finecode_builtin_handlers", editable = true }
fine_python_recommended = { path = "../../presets/fine_python_recommended", editable = true }
fine_python_lint = { path = "../../presets/fine_python_lint", editable = true }
fine_python_format = { path = "../../presets/fine_python_format", editable = true }
fine_python_test = { path = "../../presets/fine_python_test", editable = true }
fine_precommit = { path = "../../presets/fine_precommit", editable = true }
fine_python_pip = { path = "../fine_python_pip", editable = true }
fine_python_virtualenv = { path = "../fine_python_virtualenv", editable = true }
fine_python_uv = { path = "../fine_python_uv", editable = true }

[tool.setuptools]
packages = ["fine_python_isort"]
