[project]
name = "fine_python_package_info"
version = "0.2.0a1"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <= 3.14"
dependencies = [
    "finecode_extension_api~=0.4.0a0",
    "tomlkit==0.11.*",
    "twine==6.2.*",
    "build==1.4.*",
]

[project.entry-points."finecode.activator"]
fine_python_package_info = "fine_python_package_info.activator:Activator"

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.finecode.env.dev_workspace.dependencies]
finecode_dev_common_preset = { path = "../../finecode_dev_common_preset", editable = true }
finecode = { path = "../../", editable = true }
finecode_extension_runner = { path = "../../finecode_extension_runner", editable = true }

[tool.setuptools]
packages = ["fine_python_package_info"]
