[project]
name = "fine_python_package_info"
version = "0.2.0a1"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 3.15"
dependencies = [
    "finecode_extension_api~=0.4.0a0",
    "fine_python_lang~=0.1.0a0",
    "tomlkit==0.11.*",
    "twine==6.2.*",
    "build==1.4.*",
]

[project.entry-points."finecode.activator"]
fine_python_package_info = "fine_python_package_info.activator:Activator"

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.setuptools]
packages = ["fine_python_package_info"]
