[project]
name = "fine_python_pyrefly"
version = "0.2.0a1"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 3.15"
dependencies = ["finecode_extension_api~=0.4.0a0", "fine_type_check~=0.1.0a0", "fine_python_lang~=0.1.0a0", "fine_semantic_tokens~=0.1.0a0", "fine_code_hierarchy~=0.1.0a0", "fine_symbol_info~=0.1.0a0", "pyrefly (>=0.30.0,<1.0.0)"]
[project.optional-dependencies]
jsonrpc = ["finecode_jsonrpc~=0.1.0a0"]

[project.entry-points."finecode.activator"]
fine_python_pyrefly = "fine_python_pyrefly.activator:Activator"

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.setuptools]
packages = ["fine_python_pyrefly"]
