[project]
name = "fine_python_pytest"
version = "0.1.0a0"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 3.15"
# pytest changelog: https://docs.pytest.org/en/stable/changelog.html
dependencies = [
    "finecode_extension_api~=0.4.0a0",
    "pytest>=8.0.0,<10.0.0",
    "pytest-json-report>=1.5.0",
]

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.setuptools]
packages = ["fine_python_pytest"]
